--- a/RenderDuckEngine/RenderDuckEngine/imgui.ini
+++ b/RenderDuckEngine/RenderDuckEngine/imgui.ini
@@ -4,13 +4,13 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=396,45
-Size=287,810
+Pos=440,94
+Size=713,777
 Collapsed=0
 
 [Window][Hello, world!]
-Pos=36,37
-Size=284,810
+Pos=12,14
+Size=453,810
 Collapsed=0
 
 [Window][Dear ImGui Demo/ResizableChild_478B81A3]
@@ -62,6 +62,36 @@ Collapsed=0
 [Window][Example: Property editor/##tree_37EC733C]
 IsChild=1
 Size=169,415
+
+[Window][Example: Auto-resizing window]
+Pos=60,60
+Size=542,369
+Collapsed=0
+
+[Window][Same title as another window##1]
+Pos=100,100
+Size=451,61
+Collapsed=0
+
+[Window][###AnimatedTitle]
+Pos=100,300
+Size=247,48
+Collapsed=0
+
+[Window][Same title as another window##2]
+Pos=128,194
+Size=451,61
+Collapsed=0
+
+[Window][Dear ImGui Metrics/Debugger]
+Pos=804,51
+Size=346,375
+Collapsed=0
+
+[Window][Viewport]
+Pos=559,46
+Size=672,563
+Collapsed=0
 
 [Table][0xB6880529,2]
 RefScale=13
