Organised Allocator Functions, adjusted imgui style

--- a/RenderDuckEngine/RenderDuckEngine/imgui.ini
+++ b/RenderDuckEngine/RenderDuckEngine/imgui.ini
@@ -9,7 +9,7 @@ Size=713,777
 Collapsed=0
 
 [Window][Hello, world!]
-Pos=12,14
+Pos=2,21
 Size=453,810
 Collapsed=0
 
@@ -46,6 +46,7 @@ Size=1600,900
 Collapsed=0
 
 [Window][WindowOverViewport_11111111]
+Pos=0,0
 Size=1600,900
 Collapsed=0
 
@@ -89,8 +90,8 @@ Size=346,375
 Collapsed=0
 
 [Window][Viewport]
-Pos=559,46
-Size=672,563
+Pos=467,23
+Size=891,391
 Collapsed=0
 
 [Table][0xB6880529,2]
@@ -103,4 +104,5 @@ Column 0  Width=43
 Column 1  Weight=2.0000
 
 [Docking][Data]
+DockSpace ID=0x08BD597D Window=0x1BBC0F80 Pos=0,0 Size=1600,900 CentralNode=1
 
