Created viewport lists for different debug views

--- a/RenderDuckEngine/RenderDuckEngine/imgui.ini
+++ b/RenderDuckEngine/RenderDuckEngine/imgui.ini
@@ -4,12 +4,12 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=440,94
-Size=713,777
+Pos=188,171
+Size=1440,792
 Collapsed=0
 
 [Window][Hello, world!]
-Pos=2,21
+Pos=40,67
 Size=453,810
 Collapsed=0
 
@@ -46,8 +46,8 @@ Size=1600,900
 Collapsed=0
 
 [Window][WindowOverViewport_11111111]
-Pos=0,0
-Size=1600,900
+Pos=0,19
+Size=1600,881
 Collapsed=0
 
 [Window][Example: Log]
@@ -90,8 +90,83 @@ Size=346,375
 Collapsed=0
 
 [Window][Viewport]
-Pos=467,23
-Size=891,391
+Pos=666,168
+Size=697,413
+Collapsed=0
+
+[Window][Example: Simple layout]
+Pos=60,61
+Size=500,440
+Collapsed=0
+
+[Window][Example: Simple layout/left pane_244A9CDE]
+IsChild=1
+Size=150,386
+
+[Window][ViewportScene]
+Pos=686,64
+Size=599,385
+Collapsed=0
+
+[Window][ViewportSceneNormals]
+Pos=572,97
+Size=753,292
+Collapsed=0
+
+[Window][ViewportSSAO]
+Pos=672,66
+Size=503,320
+Collapsed=0
+
+[Window][Viewport - ]
+Pos=60,60
+Size=390,279
+Collapsed=0
+
+[Window][Viewport##]
+Pos=646,126
+Size=482,265
+Collapsed=0
+
+[Window][iewport##]
+Pos=848,465
+Size=481,288
+Collapsed=0
+
+[Window][ewport##]
+Pos=560,547
+Size=473,292
+Collapsed=0
+
+[Window][Viewport0]
+Pos=60,60
+Size=386,200
+Collapsed=0
+
+[Window][Viewport1]
+Pos=559,63
+Size=373,270
+Collapsed=0
+
+[Window][Viewport##0]
+Pos=669,134
+Size=608,518
+Collapsed=0
+
+[Window][Viewport##1]
+Pos=100,284
+Size=706,422
+Collapsed=0
+
+[Window][Viewport##2]
+Pos=0,19
+Size=1600,881
+Collapsed=0
+DockId=0x08BD597D,0
+
+[Window][Viewport##3]
+Pos=144,74
+Size=535,218
 Collapsed=0
 
 [Table][0xB6880529,2]
@@ -104,5 +179,5 @@ Column 0  Width=43
 Column 1  Weight=2.0000
 
 [Docking][Data]
-DockSpace ID=0x08BD597D Window=0x1BBC0F80 Pos=0,0 Size=1600,900 CentralNode=1
+DockSpace ID=0x08BD597D Window=0x1BBC0F80 Pos=0,19 Size=1600,881 CentralNode=1 Selected=0x5E5F7166
 
