--- a/RenderDuckEngine/RenderDuckEngine/imgui.ini
+++ b/RenderDuckEngine/RenderDuckEngine/imgui.ini
@@ -4,13 +4,13 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=188,171
+Pos=45,66
 Size=1440,792
 Collapsed=0
 
 [Window][Hello, world!]
-Pos=40,67
-Size=453,810
+Pos=0,19
+Size=452,881
 Collapsed=0
 
 [Window][Dear ImGui Demo/ResizableChild_478B81A3]
@@ -47,11 +47,11 @@ Collapsed=0
 
 [Window][WindowOverViewport_11111111]
 Pos=0,19
-Size=1600,881
+Size=2560,1367
 Collapsed=0
 
 [Window][Example: Log]
-Pos=792,69
+Pos=453,19
 Size=552,400
 Collapsed=0
 
@@ -149,25 +149,26 @@ Size=373,270
 Collapsed=0
 
 [Window][Viewport##0]
-Pos=669,134
-Size=608,518
-Collapsed=0
+Pos=189,62
+Size=1444,1001
+Collapsed=1
 
 [Window][Viewport##1]
-Pos=100,284
-Size=706,422
-Collapsed=0
-
-[Window][Viewport##2]
 Pos=0,19
-Size=1600,881
+Size=2560,1367
 Collapsed=0
 DockId=0x08BD597D,0
 
-[Window][Viewport##3]
-Pos=144,74
-Size=535,218
+[Window][Viewport##2]
+Pos=497,36
+Size=1307,1367
 Collapsed=0
+
+[Window][Viewport##3]
+Pos=0,19
+Size=1298,1367
+Collapsed=0
+DockId=0x08BD597D,0
 
 [Table][0xB6880529,2]
 RefScale=13
@@ -179,5 +180,5 @@ Column 0  Width=43
 Column 1  Weight=2.0000
 
 [Docking][Data]
-DockSpace ID=0x08BD597D Window=0x1BBC0F80 Pos=0,19 Size=1600,881 CentralNode=1 Selected=0x5E5F7166
+DockSpace ID=0x08BD597D Pos=0,19 Size=2560,1367 CentralNode=1 Selected=0x284B50D9
 
