Created settings window

--- a/RenderDuckEngine/RenderDuckEngine/RenderDuckEngine.vcxproj.filters
+++ b/RenderDuckEngine/RenderDuckEngine/RenderDuckEngine.vcxproj.filters
@@ -93,6 +93,9 @@
     <ClCompile Include="LightManager.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="SceneManager.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Camera.h">
@@ -180,6 +183,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="OutputLog.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="SceneManager.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="EngineUtils.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
