--- a/RenderDuckEngine/RenderDuckEngine/RenderDuckEngine.vcxproj
+++ b/RenderDuckEngine/RenderDuckEngine/RenderDuckEngine.vcxproj
@@ -154,6 +154,7 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="MathHelper.cpp" />
     <ClCompile Include="Renderer.cpp" />
+    <ClCompile Include="SceneManager.cpp" />
     <ClCompile Include="ShadowMap.cpp" />
     <ClCompile Include="Ssao.cpp" />
     <ClCompile Include="UIManager.cpp" />
@@ -166,6 +167,7 @@
     <ClInclude Include="DDSTextureLoader.h" />
     <ClInclude Include="DescriptorHeapAllocator.h" />
     <ClInclude Include="EngineCore.h" />
+    <ClInclude Include="EngineUtils.h" />
     <ClInclude Include="FrameResource.h" />
     <ClInclude Include="GameTimer.h" />
     <ClInclude Include="GeometryGenerator.h" />
@@ -183,6 +185,7 @@
     <ClInclude Include="MathHelper.h" />
     <ClInclude Include="OutputLog.h" />
     <ClInclude Include="Renderer.h" />
+    <ClInclude Include="SceneManager.h" />
     <ClInclude Include="ShadowMap.h" />
     <ClInclude Include="Ssao.h" />
     <ClInclude Include="types.h" />
