--- a/RenderDuckEngine/RenderDuckEngine/imgui.ini
+++ b/RenderDuckEngine/RenderDuckEngine/imgui.ini
@@ -4,7 +4,7 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=45,66
+Pos=74,81
 Size=1440,792
 Collapsed=0
 
@@ -37,7 +37,7 @@ Size=520,600
 Collapsed=0
 
 [Window][Example: Documents]
-Pos=60,60
+Pos=110,23
 Size=621,894
 Collapsed=0
 
@@ -47,7 +47,7 @@ Collapsed=0
 
 [Window][WindowOverViewport_11111111]
 Pos=0,19
-Size=2560,1367
+Size=1600,881
 Collapsed=0
 
 [Window][Example: Log]
@@ -70,7 +70,7 @@ Size=542,369
 Collapsed=0
 
 [Window][Same title as another window##1]
-Pos=100,100
+Pos=307,316
 Size=451,61
 Collapsed=0
 
@@ -95,7 +95,7 @@ Size=697,413
 Collapsed=0
 
 [Window][Example: Simple layout]
-Pos=60,61
+Pos=312,175
 Size=500,440
 Collapsed=0
 
@@ -149,13 +149,14 @@ Size=373,270
 Collapsed=0
 
 [Window][Viewport##0]
-Pos=189,62
-Size=1444,1001
-Collapsed=1
+Pos=0,19
+Size=1600,881
+Collapsed=0
+DockId=0x08BD597D,0
 
 [Window][Viewport##1]
-Pos=0,19
-Size=2560,1367
+Pos=799,19
+Size=801,881
 Collapsed=0
 DockId=0x08BD597D,0
 
@@ -170,6 +171,25 @@ Size=1298,1367
 Collapsed=0
 DockId=0x08BD597D,0
 
+[Window][Example: Custom rendering]
+Pos=144,190
+Size=623,414
+Collapsed=0
+
+[Window][Example: Constrained Resize]
+Pos=60,60
+Size=551,309
+Collapsed=0
+
+[Window][Settings]
+Pos=340,106
+Size=472,670
+Collapsed=0
+
+[Window][Settings/left pane_B1AB58F7]
+IsChild=1
+Size=150,616
+
 [Table][0xB6880529,2]
 RefScale=13
 Column 0  Sort=0v
@@ -180,5 +200,5 @@ Column 0  Width=43
 Column 1  Weight=2.0000
 
 [Docking][Data]
-DockSpace ID=0x08BD597D Pos=0,19 Size=2560,1367 CentralNode=1 Selected=0x284B50D9
+DockSpace ID=0x08BD597D Pos=0,19 Size=1600,881 CentralNode=1 Selected=0x284B50D9
 
