--- a/RenderDuckEngine/RenderDuckEngine/imgui.ini
+++ b/RenderDuckEngine/RenderDuckEngine/imgui.ini
@@ -150,15 +150,15 @@ Collapsed=0
 
 [Window][Viewport##0]
 Pos=0,19
-Size=1600,881
+Size=778,881
 Collapsed=0
-DockId=0x08BD597D,0
+DockId=0x00000001,0
 
 [Window][Viewport##1]
-Pos=799,19
-Size=801,881
+Pos=780,19
+Size=820,881
 Collapsed=0
-DockId=0x08BD597D,0
+DockId=0x00000002,0
 
 [Window][Viewport##2]
 Pos=497,36
@@ -169,7 +169,7 @@ Collapsed=0
 Pos=0,19
 Size=1298,1367
 Collapsed=0
-DockId=0x08BD597D,0
+DockId=0x00000001,0
 
 [Window][Example: Custom rendering]
 Pos=144,190
@@ -182,7 +182,7 @@ Size=551,309
 Collapsed=0
 
 [Window][Settings]
-Pos=340,106
+Pos=605,62
 Size=472,670
 Collapsed=0
 
@@ -200,5 +200,7 @@ Column 0  Width=43
 Column 1  Weight=2.0000
 
 [Docking][Data]
-DockSpace ID=0x08BD597D Pos=0,19 Size=1600,881 CentralNode=1 Selected=0x284B50D9
+DockSpace   ID=0x08BD597D Window=0x1BBC0F80 Pos=0,19 Size=1600,881 Split=X Selected=0x284B50D9
+  DockNode  ID=0x00000001 Parent=0x08BD597D SizeRef=778,1367 CentralNode=1 Selected=0x284B50D9
+  DockNode  ID=0x00000002 Parent=0x08BD597D SizeRef=820,1367 Selected=0x105A3F75
 
