--- a/RenderDuckEngine/RenderDuckEngine/imgui.ini
+++ b/RenderDuckEngine/RenderDuckEngine/imgui.ini
@@ -200,7 +200,7 @@ Column 0  Width=43
 Column 1  Weight=2.0000
 
 [Docking][Data]
-DockSpace   ID=0x08BD597D Window=0x1BBC0F80 Pos=0,19 Size=1600,881 Split=X Selected=0x284B50D9
+DockSpace   ID=0x08BD597D Pos=0,19 Size=1600,881 Split=X Selected=0x284B50D9
   DockNode  ID=0x00000001 Parent=0x08BD597D SizeRef=778,1367 CentralNode=1 Selected=0x284B50D9
   DockNode  ID=0x00000002 Parent=0x08BD597D SizeRef=820,1367 Selected=0x105A3F75
 
