--- a/RenderDuckEngine/RenderDuckEngine/RenderDuckEngine.vcxproj
+++ b/RenderDuckEngine/RenderDuckEngine/RenderDuckEngine.vcxproj
@@ -140,6 +140,7 @@
     <ClCompile Include="d3dApp.cpp" />
     <ClCompile Include="d3dUtil.cpp" />
     <ClCompile Include="DDSTextureLoader.cpp" />
+    <ClCompile Include="ECS\EntityAdmin.cpp" />
     <ClCompile Include="FrameResource.cpp" />
     <ClCompile Include="GameTimer.cpp" />
     <ClCompile Include="GeometryGenerator.cpp" />
@@ -154,11 +155,13 @@
     <ClCompile Include="LightManager.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="MathHelper.cpp" />
+    <ClCompile Include="ECS\Components\MeshComponent.cpp" />
     <ClCompile Include="Renderer.cpp" />
     <ClCompile Include="SceneManager.cpp" />
     <ClCompile Include="Settings.cpp" />
     <ClCompile Include="ShadowMap.cpp" />
     <ClCompile Include="Ssao.cpp" />
+    <ClCompile Include="ECS\Components\TransformComponent.cpp" />
     <ClCompile Include="UIManager.cpp" />
     <ClCompile Include="XMLParser.cpp" />
     <ClCompile Include="XMLSerialiser.cpp" />
@@ -166,6 +169,7 @@
   <ItemGroup>
     <ClInclude Include="AppAdmin.h" />
     <ClInclude Include="Camera.h" />
+    <ClInclude Include="ECS\Components\Component.h" />
     <ClInclude Include="d3dApp.h" />
     <ClInclude Include="d3dUtil.h" />
     <ClInclude Include="d3dx12.h" />
@@ -173,9 +177,12 @@
     <ClInclude Include="DescriptorHeapAllocator.h" />
     <ClInclude Include="EngineCore.h" />
     <ClInclude Include="EngineUtils.h" />
+    <ClInclude Include="ECS\Entity.h" />
+    <ClInclude Include="ECS\EntityAdmin.h" />
     <ClInclude Include="FrameResource.h" />
     <ClInclude Include="GameTimer.h" />
     <ClInclude Include="GeometryGenerator.h" />
+    <ClInclude Include="Handle.h" />
     <ClInclude Include="include\imgui\backends\imgui_impl_dx12.h" />
     <ClInclude Include="include\imgui\backends\imgui_impl_win32.h" />
     <ClInclude Include="include\imgui\imconfig.h" />
@@ -192,6 +199,7 @@
     <ClInclude Include="include\rapidxml\rapidxml_utils.hpp" />
     <ClInclude Include="LightManager.h" />
     <ClInclude Include="MathHelper.h" />
+    <ClInclude Include="ECS\Components\MeshComponent.h" />
     <ClInclude Include="OutputLog.h" />
     <ClInclude Include="Renderer.h" />
     <ClInclude Include="RenderSettings.h" />
@@ -199,6 +207,7 @@
     <ClInclude Include="Settings.h" />
     <ClInclude Include="ShadowMap.h" />
     <ClInclude Include="Ssao.h" />
+    <ClInclude Include="ECS\Components\TransformComponent.h" />
     <ClInclude Include="types.h" />
     <ClInclude Include="UIManager.h" />
     <ClInclude Include="UploadBuffer.h" />
